# vipere

./: .gitignore  README.md  config_vipere.ini  config_vipere.yaml  pyproject.toml  setup.cfg  viper.py  vipere.py
data/POL/: cr2res_obs_pol_demodulatedA.fits
data/WASP18/: run_telluric2.sh
inst/: inst_CRIRES.py
tests/: test_runviper.py
vipere/: __init__.py  config_vipere.yaml
