[build-system]
requires = ["setuptools >= 45"]
build-backend = "setuptools.build_meta"

[project]
name = "vipere"
version = "0.1"
description = "Telluric correction and template creation for CRIRES+ spectra"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Alexis Lavail" },
]
requires-python = ">=3.10"
keywords = ["astronomy", "spectroscopy", "telluric", "CRIRES"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "astropy",
    "numpy",
    "pyyaml",
    "scipy",
]

[project.urls]
Source = "https://git.astro.lavail.net/alexis/vipere"
Upstream = "https://github.com/mzechmeister/viper"

[project.scripts]
vipere = "vipere:run"

[project.optional-dependencies]
doc = ["sphinx"]

[tool.setuptools]
py-modules = ["vipere"]

[tool.setuptools.package-data]
vipere = ["lib/**"]
