[metadata]
name = viper
version = 1.1
license = GPL-3.0-or-later
author = Zechmeister, Koehler
author_email = jana@tls-tautenburg.de
description = RV reduction pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mzechmeister/viper
project_urls = 
        Homepage = https://mzechmeister.github.io/viper_RV_pipeline
        Documentation = https://mzechmeister.github.io/viper_RV_pipeline/doc/VIPER-pipeline-manual.pdf
        Source = https://github.com/mzechmeister/viper
keywords = python
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Scientific/Engineering :: Astronomy
	Intended Audience :: Developers
	Development Status :: 4 - Beta

[options]
python_requires = >=3.7
install_requires = 
	astropy
	configparser
	numpy
	scipy
include_package_data = True
packages =
	viper
	inst
	utils
package_dir =
	viper = .
	viper.inst = inst
	viper.utils = utils

zip_safe = False

[options.package_data]
viper = lib/**

[options.entry_points]
console_scripts =
	viper = viper.viper:run

[options.extras_require]
doc = sphinx

[egg_info]
tag_build = 
tag_date = 0

